palb/app2/external-service-app2.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-org
  namespace: app2
spec:
  type: ExternalName
  externalName: nginx.org
