palb/app2/node-port-nginx-org.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-app2
  namespace: app2
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30155
    protocol: TCP
    name: nginx-org-http
  selector:
    app: app2-nginx-ingress
